Make bug divs invisible on correct click

--- a/css/main.css
+++ b/css/main.css
@@ -97,19 +97,3 @@
 #start {
 	display: inline-block;
 }
-
-#bug1 {
-/*	background-color: red; */
-}
-
-#bug2 {
-	background-color: blue;
-}
-
-#bug3 {
-	background-color: yellow;
-}
-
-#bug4 {
-	background-color: purple;
-}
